<resources>
    <string name="app_name">CAMS</string>
    <string name="open">OPEN</string>
    <string name="close">CLOSE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="about_cams">About CAMS</string>
    <string name="the_problem_to_solve">The Problem to Solve</string>
    <string name="building_climate_resilience">Building climate resilience</string>
    <string name="what_is_cams">CAMS is a critical asset management system developed as part of a voluntary effort, led by <a href="https://www.ariseglobalnetwork.org/">ARISE-US</a>, a private-sector advisory group to the United Nations Office for Disaster Risk Reduction (UNDRR), and <a href="https://www.ariseglobalnetwork.org/">TerminusDB</a>.</string>
    <string name="the_problem_to_solve_desc">Global warming is increasing the ferocity of extreme weather events all over the world. Many island nations, cities, and communities are impacted more than most, despite the fact that they emit very little greenhouse gases, and are normally densely covered with trees. It is unfair, it is unjust, but it is a reality for these people who have done more than most to preserve the natural wonders of the world.</string>
    <string name="open_source_for_good">Open source for good</string>
    <string name="where_the_cams_project_started">Where the CAMS project started</string>
    <string name="open_source_for_good_desc">The project is open source and is focused on providing a data-driven system to help islands, cities, and communities become disaster resilient. It does this by storing all critical asset data and the asset dependencies so a region understands not only what its critical assets are, but how one asset could impact other assets and the cascading effect of asset failures.</string>
    <string name="a_top_level_view_of_cams">A top-level view of CAMS</string>
    <string name="a_top_level_view_of_cams_desc">CAMS is a data-driven mobile and desktop application. It is used to plan and respond to disasters to show the impact of critical assets and the cascading failure chains in the event of a catastrophe. The application is designed to work on and offline to ensure usefulness in the event of an incident where power and connectivity are lost.\n\nThe application is designed to:\n\n\u2022 Build an inventory of all the region’s critical assets and the relevant data associated with them, for example, geographical coordinates. \n\u2022 Capture key contact information for assets – This could include multiple people for a power plant, through to a school caretaker who may have the keys to the school and need to be contacted to open it up as a place of shelter.\n\u2022 Capture data on disaster severity and impact. These can range from cybersecurity threats to natural disasters and each has differing levels of criteria in terms of impact.\n\u2022 Plot relationships, spatial and dependency, between critical assets to identify failure chains.\nProvide the ability to highlight the impact on critical assets and their failure chains based on the severity and type of disaster.\n\nUsers can then:\n\u2022 Input and edit data via a user interface to keep assets updated.\n\u2022 Automate data input from other databases.\nImport data from flat files.\n\u2022 Identify failure chains using a browser-based desktop application and mobile app. Users will be able to use either a map GUI to identify and plot risks and their dependencies or a form-based app.\n\u2022 Provide the output of failure chains to other teams such as emergency control rooms, government officials, and risk analysis tools/teams.</string>
    <string name="technology">Technology</string>
    <string name="technology_desc">CAMS is built on TerminusDB which is an open-source document graph database. The database itself enables you to build quickly with the simplicity of JSON documents and turn objects into powerful knowledge graphs – perfect for critical asset relationships.\n\nFor more information about the front and backend technology, visit the CAMS GitHub repo.</string>
    <string name="learn_more">Click to <h4>Learn more</h4></string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="where_the_cams_project_started_desc">CAMS can be traced back to Hurricane Maria on the Caribbean Island of Dominica. In September 2017, Hurricane Maria suddenly strengthened up to a category five storm as it hit Dominica causing widespread devastation.</string>
    <string name="where_the_cams_project_started_desc_2">Five days after the storm hit, Dominica’s Prime Minister Roosevelt Skerrit addressed the United Nations General Assembly.\n\n“I come to you straight from the front line of the war on climate change,\n\n“In the past, we would prepare for one heavy storm a year. Now, thousands of storms form on a breeze in the mid-Atlantic and line up to pound us with maximum force and fury.”\n\nTogether with the United Nations and advisory group ARISE-US, Dominica decided to build back stronger and focus on disaster resilience to help improve its response to extreme weather events. Which is where CAMS began.</string>
    <string name="will_we_achieve_the_paris_agreement_targets">Will we achieve the Paris Agreement targets?</string>
    <string name="will_we_achieve_the_paris_agreement_targets_desc">The Paris Agreement saw world leaders pledge to limit global warming to well below 2°C, but with other concerns like war, trade agreements, and domestic issues, can these leaders maintain focus to meet or exceed these promises?\n\nAccording to an article published on <a href="https://www.nature.com/articles/d41586-020-01125-x">nature.com</a>, by 2060, based on the current global warming trajectory, the Earth will heat up by between 3–6°C, which is huge.\n\nWhat does this mean for vulnerable populations?\n\nQuite simply, more disasters. There will be more frequent storms, heatwaves, wildfires, and many more catastrophes. These will result in disruption and chaos to sanitation, access to clean drinking water, power, medical supplies, communications, and food production and supply. \n\nIn short, many thousands of people will lose their lives.</string>
    <string name="the_problem_we_re_solving">The problem we’re solving</string>
    <string name="the_problem_we_re_solving_desc">While CAMS cannot change climate change, this is a job for every person, we can help islands, cities, and communities become disaster resilient to speed up recovery and saves lives. By using technology we can help disaster resilience professionals plan for every eventuality. The main problems islands, cities, and communities face is not being able to fully:\n\n\u2022 Identify all critical assets which could affect its disaster resilience.\n\u2022 Understand the risk that each asset faces and how well placed it is to deal with that risk.\n\u2022 Understand how assets are interconnected and the chained consequences that may result.\n\u2022 Utilize data in a format that is usable and functional to first responders and other disaster resilience stakeholders.\n\n\n\Solving these problems will lay the foundation for disaster resilience.</string>
    <string name="building_climate_resilience_for_those_who_need_it">Building climate resilience for those who need it</string>
    <string name="an_open_source_project_desc">An open-source project for good. Helping nations, cities, and communities use local knowledge with cutting edge technology to become climate resilient.</string>
    <string name="cams_github_repo">CAMS Github Repo</string>

</resources>